add YYYY check and error number, refactoring code

--- a/optooltest.html
+++ b/optooltest.html
@@ -16,6 +16,7 @@
 <li><a href="https://usa.experian.com/#/registration?offer=at_fcras100&br=exp&op=FRCR-PRD-PCO-100-MQE-XXXXXXX-B0-EXP-TWIN-DIR-XXXXXX-XXXXXX-PHAS2">CTA6</a></li>
 <li><a href="https://usa.experian.com/#/registration?offer=at_fcras100&br=exp&op=XXXX-PRD-PCO-100-MQE-XXXXXXX-CC-EXP-TWIN-DIR-XXXXXX-XXXXXX-PHAS2">CTA7</a></li>
 <li><a href="https://usa.experian.com/#/registration?offer=at_fcras100&br=exp&op=FRCR-PRD-PCO-100-MQE-RNSCOMP-XX-EXP-TWIN-DIR-XXXXXX-XXXXXX-PHAS2">CTA8</a></li>
+<li><a href="https://usa.experian.com/#/registration?offer=at_fcras100&br=exp&op=FRCR-YYY-PCO-100-MQE-YYYYYYY-XX-EXP-TWIN-DIR-YYYYYY-XXXXXX-PHAS2">CTA9</a></li>
 </ul>
 </body>
 </html>
